# czv

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: cargo-runner.yml
czv/: .gitignore  Cargo.toml  README.md
czv-python/: Cargo.toml  README.md  czv.pyi  pyproject.toml
czv-python/examples/: simple_row_count.py
czv-python/src/: count.rs  lib.rs
czv-python/tests/: test_count.py
czv-wasm/: Cargo.toml  README.md
czv-wasm/examples/basic-demo/: README.md  index.html  script.js  script.ts
czv-wasm/examples/node-demo/: README.md  sample.ts
czv-wasm/examples/web-demo/: README.md  bun.lockb  index.html  package.json  vite.config.ts
czv-wasm/examples/web-demo/src/: App.tsx
czv-wasm/src/: count.rs  lib.rs
czv-wasm/tests/: count.rs
czv/benches/: bench_count.rs  benches.rs
czv/examples/: simple_row_count.rs
czv/src/: count.rs  lib.rs  slice.rs
czv/tests/: test_count.rs  test_slice.rs
