[package]
name = "czv-python"
version = "0.0.0"
authors = ["Mueez Khan"]
description = "Python library for performing CSV-related functions for data engineering and analysis."
repository = "https://github.com/rzmk/czv"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
czv = { path = "../czv" }
pyo3 = { version = "0.21.2", features = ["extension-module"] }
thiserror = "1.0.61"
