[package]
name = "czv-wasm"
version = "0.0.0"
authors = ["Mueez Khan"]
description = "WASM library for performing CSV-related functions for data engineering and analysis."
repository = "https://github.com/rzmk/czv"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
thiserror = "1.0.61"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-test = { version = "0.3.42" }
