[package]
name = "czv"
version = "0.0.0"
authors = ["Mueez Khan"]
description = "Rust library for performing CSV-related operations for data engineering and analysis."
repository = "https://github.com/rzmk/czv"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["csv", "library", "data"]
categories = ["text-processing"]

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
thiserror = "1.0.61"
typed-builder = "0.18.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
